fixed some z-index stuff

--- a/src/main/resources/static/css/stars.css
+++ b/src/main/resources/static/css/stars.css
@@ -79,7 +79,7 @@ ol, ul {
       left: 0;
       right: 0;
       display: block;
-      /* z-index: 0; 0 */
+      z-index: 0; /*0*/
   }
   
   .twinkling{
@@ -91,7 +91,7 @@ ol, ul {
       right: 0;
       top: 0;
       bottom: 0;
-      /* z-index: 2; 2 */
+      z-index: 2; /*2*/
       
       -moz-animation:move-background 70s linear infinite;
     -ms-animation:move-background 70s linear infinite;
@@ -110,26 +110,14 @@ ol, ul {
       right: 0;
       top: 0;
       bottom: 0;
-      /* z-index: 3; */
+      z-index: 3; /*3*/
   
      -moz-animation:move-background 150s linear infinite;
     -ms-animation:move-background 150s linear infinite;
     -o-animation:move-background 150s linear infinite;
     -webkit-animation:move-background 150s linear infinite;
     animation:move-background 150s linear infinite;
-  }
-
-  .stars,.clouds,.twinkling{
-      z-index: -1;
-  }
-  /* img{
-    height: 70vh;
-    width:70vh;
-    position: absolute;
-    z-index: 3;
-    right: 20px;
-  } */
-  
+  } 
 
 
   #asteroid-img-div {
@@ -157,7 +145,6 @@ ol, ul {
 }
 
 
-=======
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -185,7 +172,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-.stars, .twinkling, .clouds {
+/* .stars, .twinkling, .clouds {
   position: absolute;
   display: block;
   top: 0;
@@ -194,7 +181,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   right: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: -3;
 }
 
 .stars {
@@ -226,5 +213,5 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   to {
     background-position: 10000px 0;
   }
-}
+} */
 
